samples/_failures_safe/1761438439_f0ce81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75e269fd.c: In function ‘main’:
./samples/SAFE/__tmp_75e269fd.c:146:16: error: missing terminating " character
  146 |         printf("Polynomial value at root: %.10f
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_75e269fd.c:146:9: error: expected expression at end of input
  146 |         printf("Polynomial value at root: %.10f
      |         ^~~~~~
./samples/SAFE/__tmp_75e269fd.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75e269fd.c:146:9: error: expected declaration or statement at end of input
